Stopped pausing on mouse hover event

--- a/LordLamington.Heartcore.Web/wwwroot/display/index.html
+++ b/LordLamington.Heartcore.Web/wwwroot/display/index.html
@@ -16,7 +16,7 @@
     <header>
         <div id="carouselSlideContainer" class="carousel carousel-fade">
             <ol class="carousel-indicators">
-                <li data-target="#carouselSlideContainer" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselSlideContainer" data-slide-to="0" data-pause="false" class="active"></li>
             </ol>
             <div class="carousel-inner" role="listbox">
                 <!-- Slide One - Set the background image for this slide in the line below -->
